public/css/main.css
/****Start Of Global Styles*****/
html, body {
    margin: 0;
    padding: 0;
}
.content_container, .product_container{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}
.product_container{
    align-items: flex-start;
}
.header{
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;

    height: 120px;
    background-color: #edf2f7;
    border-bottom: 2px solid black;
}
.app_title, .app_footer{
    text-align: center;
    font-family: "Roboto Condensed", sans-serif;
}

.product_card{
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    width: 25vw;
    margin: 20px;
    font-family: "Roboto Condensed", sans-serif;

}
.product_content{
    padding: 10px;
    border: 2px solid black;
    border-radius: 8px;
}
.product_image{
    width: 25vw;
    height: 25vh;
}
.product_data{
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
    width: 25vw;
}
.product_name_desc{
    display: flex;
    flex-flow: column nowrap;
}
.action_buttons{
    opacity: 0;
    transition: opacity 1s;
}

/*Comments Start*/
.comments_toggle{
    padding: 20px;
    background-color: #1a202c;
    border-radius: 8px;
    text-align: center;
    color: white;
    width: 23vw;
}
.comments{
    display: none;
    width: 25vw;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    font-family: "Inconsolata", monospace;

}
.comment_even, .comment_uneven{
    width: 25vw;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;
    background-color: #718096;
    margin: 5px;
    color: white;
}
.comment_even{
    border-radius: 25px 25px 0 25px;

}
.comment_uneven{
    border-radius: 25px 25px 25px 0;
}
.comment_form{
    padding: 30px;
    width: 24vw;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;
    background-color: #718096;
    border-radius: 15px;


}
.comment_signature{
    width: 25vw;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
}

.input_text{
    padding: 15px;
    background-color: #7b899d;
    border-bottom: 2px solid white;
    color: white;
    border-radius: 8px;
    margin-bottom: 8px;
}
.input_text::placeholder, .input_comment::placeholder{
    color: white;
}
.input_comment{
    resize: none;
    height: 10vh;
    width: 23vw;
    background-color: #7b899d;
    border-bottom: 2px solid white;
    color: white;
}
.input_submit{
    margin: 8px;
    background-color: #7b899d;
    border-bottom: 2px solid white;
    color: white;
    padding: 15px;
    border-radius: 8px 12px 8px 12px;
    font-size: large;
}
/*Comments End*/

.product_card:hover .action_buttons{
    opacity: 1;
}

.menu_button{
    position: absolute;
    right: 1vw;
    width: 50px;
    z-index: 3;
}
.navigation{
    position: fixed;
    top: 0;
    right: -300px;
    width: 300px;
    height: 100vh;
    background-color: #edf2f7;
    color: white;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    z-index: 2;
}
.nav_item{
    width: 200px;
    padding: 12px;
    border-radius: 8px 12px 8px 12px;
    border: 2px solid #0a58ca;
    text-align: center;
    background-color: #1a202c;
    margin: 30px;
    font-size: x-large;
}
.nav_item :visited{
    text-decoration: none;
    color: white;
}
.filters_toggle{
    position: fixed;
    right: 1vw;
    top: 200px;
    z-index: 1;
}
.filters{
    position: fixed;
    top: 0;
    right: -300px;
    bottom: 0;

    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;

    padding-top: 250px;

    width: 300px;
    background-color: #edf2f7;

}
/****End Of Global Styles*****/

